--- a/index.html
+++ b/index.html
@@ -13,24 +13,8 @@
 </head>
 
 <body>
-        <div class="reveal">
-            <div class="slides">
-                <section>Slide 1</section>
-
-                <section>
-                    <div id='steps'>
-                    	<!-- <a href="javascript:void(0)">获取数据</a> -->
-                    	<el-button>aaaaa</el-button>
-                    </div>
-                </section>
-
-                <section>
-                    <section>Vertical Slide 1</section>
-                    <section>Vertical Slide 2</section>
-                </section>
-                
-                <section>Slide 4</section>
-            </div>
+        <div id='steps'>
+            <a href="reveal.html">ppt on web</a>
         </div>
 </body>
 
