--- a/pingall.html
+++ b/pingall.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title></title>
+    <title>批量ping</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.14/vue.min.js"></script>
@@ -14,8 +14,7 @@
 
 <body>
         <div id='steps'>
-            <a href="reveal.html">ppt on web</a>
-            <a href="pingall.html">pingall</a>
+            pingall
         </div>
 </body>
 
