--- a/pingall.html
+++ b/pingall.html
@@ -16,7 +16,7 @@
         <div id='steps' style="width: 1340px; margin: 0 auto;margin-top: 100px;">
             <template>
                 <div style="color: #fff; height: 20px">
-                    <!-- 只能重装用户2065544的机器 -->
+                    性能提升
                 </div>
                 <el-input
                   type="textarea"
